--- a/src/partials/note.html
+++ b/src/partials/note.html
@@ -1,41 +1,4 @@
 <body>
-  <!-- <div class="body-container">
-    <div class="body-title">
-      <p class="body-title__text">
-        Title <i class="fa-solid fa-arrow-up-short-wide"></i
-        ><i class="fa-solid fa-arrow-down-wide-short"></i>
-      </p>
-      <p class="body-title__data">
-        Data <i class="fa-solid fa-arrow-up-short-wide"></i
-        ><i class="fa-solid fa-arrow-down-wide-short"></i>
-      </p>
-    </div> -->
-    <!-- <div class="find-wrapper">
-      <input
-        class="header-search_input"
-        type="text"
-        id="search"
-        name="search"
-        placeholder="Search by title"
-      />
-      <i class="fa-solid fa-magnifying-glass"></i>
-    <div class="form-wrapper">
-    <form class="note_form">
-      <label for="title">Title</label
-      ><input type="text" name="title" value="New note" /><label
-        for="description"
-        >Description 
-        <!<span class="error"
-          >must be more than 5 characters
-        </span>  -->
-        <!-- </label
-      ><textarea name="description" class="invalid"></textarea
-      ><button class= "btn-save" type="submit">SAVE</button
-      ><button class="btn-delete"><i class="fa-solid fa-trash"></i></button>
-    </form>
-  </div> -->
-  <!-- </div>
-</div> -->
 <div class="notes" id="app">
   <!-- <div class="notes__sidebar">
       <button class="notes__add" type="button">Add Note</button>
@@ -52,5 +15,5 @@
       <textarea class="notes__body">I am the notes body...</textarea>
   </div> -->
 </div>
-<button class="btn-delete" id="btn-delete"><i class="fa-solid fa-trash"></i></button>
+<!-- <button class="btn-delete" id="btn-delete"><i class="fa-solid fa-trash"></i></button> -->
 </body>
