--- a/src/sass/_note.scss
+++ b/src/sass/_note.scss
@@ -2,6 +2,9 @@ html,
 body {
     height: 100%;
     margin: 0;
+    background-image: url(../images/notes.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 .notes {
@@ -11,6 +14,10 @@ body {
 
 .notes * {
     font-family: sans-serif;
+}
+
+.notes__list{
+    position: relative;
 }
 
 .notes__sidebar {
@@ -79,6 +86,7 @@ body {
     border: none;
     outline: none;
     width: 100%;
+    background-color: inherit;
 }
 
 .notes__title {
@@ -96,4 +104,12 @@ body {
 
 .btn-delete{
     position: absolute;
+    right: 10px;
+    border: none;
+    background-color: inherit;
+    color: var(--btn-color);
+    font-size: 16px;
+}
+.btn-delete:hover {
+    color: var(--black-color);
 }
